--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@
   /* 1 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
+  background-color:#97efc0 ;
 }
 
 /* Sections
@@ -34,6 +35,7 @@
  */
 body {
   margin: 0;
+
 }
 
 /**
@@ -41,6 +43,7 @@ body {
  */
 main {
   display: block;
+
 }
 
 /**
@@ -380,6 +383,7 @@ body {
   color: #404040;
   background: white;
   font-size: 1rem;
+  background-color: aliceblue;
 }
 
 p,
